<package format="2">
  <name>warehouse_ros_mongo</name>
  <version>0.8.8</version>
  <description>
    Implementation of warehouse_ros for MongoDB
  </description>
  <license>BSD</license>
  <url>http://ros.org/wiki/warehouse_ros</url>

  <author email="bhaskara@willowgarage.com">Bhaskara Marthi</author>
  <author email="cbrew@fetchrobotics.com">Connor Brew</author>
  <maintainer email="isucan@google.com">Ioan Sucan</maintainer>


  <buildtool_depend>catkin</buildtool_depend>
  <!-- Catkin Dependencies -->
  <depend>roscpp</depend>
  <depend>rospy</depend>
  <depend>rostime</depend>
  <depend>rostest</depend>
  <depend>std_msgs</depend>
  <depend>warehouse_ros</depend>
  <depend>class_loader</depend>
  <!-- System Dependencies -->
  <depend>curl</depend>
  <depend>libssl-dev</depend>
  <depend>mongodb</depend>
  <depend>python-pymongo</depend>

  <test_depend>gtest</test_depend>


  <export>
    <warehouse_ros plugin="${prefix}/mongo_database_connection_plugin_description.xml"/>
  </export>

</package>
